--- a/index.html
+++ b/index.html
@@ -97,5 +97,6 @@
 </div>
 </div>
 <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
+<script src="//code.tidio.co/psmzfflzbhgt939jtj0j7mzxlhzecepr.js" async></script>
 <script src="./script.js"></script>
 </body>
